src/objects/Rep__c.object
<CustomObject>
    <description>Account Representatives</description>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch_Region__c</referenceTo>
        <relationshipLabel>Rep #&apos;s</relationshipLabel>
        <relationshipName>Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employees__c</referenceTo>
        <relationshipLabel>Reps</relationshipLabel>
        <relationshipName>Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FMA_Review_Date__c</fullName>
        <label>FMA Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Employee_ID__c</fullName>
        <label>Legacy Employee ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Owner_ID__c</fullName>
        <label>Legacy Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Number__c</fullName>
        <externalId>true</externalId>
        <label>Rep Number</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rep_Statement_Name__c</fullName>
        <label>Rep Statement Name</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_1_Pct__c</fullName>
        <label>Split 1 %</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Split_1_Rep_Number__c</fullName>
        <formula>Split_1_Rep__r.Rep_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split 1 Rep #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_1_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Split 1 Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Reps</relationshipLabel>
        <relationshipName>Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_2_Pct__c</fullName>
        <label>Split 2 %</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Split_2_Rep_Number__c</fullName>
        <formula>Split_2_Rep__r.Rep_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split 2 Rep #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_2_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Split 2 Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Reps (Split 2 Rep)</relationshipLabel>
        <relationshipName>Reps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_3_Pct__c</fullName>
        <label>Split 3 %</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Split_3_Rep_Number__c</fullName>
        <formula>Split_3_Rep__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split 3 Rep #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_3_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Split 3 Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Reps (Split 3 Rep)</relationshipLabel>
        <relationshipName>Reps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rep</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rep_Number__c</columns>
        <columns>Region__c</columns>
        <columns>Branch__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>